--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<h1>welcome to MockNostalgia.com!</h1>
+<h2>we have screen recorders, old revivals of anything we can find, and alot more! including support for old browsers.</h2>
 <fieldset>
-<h1>coming soon...</h1>
-<a href="https://nerdbob.pw">main site for now</a>
+  <a href="screen_recorders.html">screen recorders</a>
+  <a href="revivals.html">revivals of anything we can find</a>
+</fieldset>
+<p>mocknostalgia.com by mack.</p>
