--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>welcome to MockNostalgia.com!</h1>
 <h2>we have screen recorders, old revivals of anything we can find, and alot more! including support for old browsers.</h2>
 <fieldset>
-  <a href="screen_recorders.html">screen recorders</a>
-  <a href="revivals.html">revivals of anything we can find</a>
+  <p><a href="screen_recorders.html">screen recorders</a></p>
+  <p><a href="revivals.html">revivals of anything we can find</a></p>
 </fieldset>
-<p>mocknostalgia.com by mack.</p>
+<center><p>mocknostalgia.com by mack.</p></center>
