--- a/screen_recorders.html
+++ b/screen_recorders.html
@@ -2,6 +2,7 @@
 <fieldset>
   <h3>1990-2004</h3>
   <p><a href="/downloads/HC1Setup.exe">Hypercam 1 (Unregistered) - 1997</a></p>
+</fieldset>
 <fieldset>
   <h3>2005-2007</h3>  
   <p><a href="/downloads/frontcam_1.3.exe">Frontcam 1.3 - 2005</a></p>
