--- a/screen_recorders.html
+++ b/screen_recorders.html
@@ -1,7 +1,7 @@
 <h1>screen recorders library of MockNostalgia.com</h1>
 <fieldset>
   <h3>1990-2004</h3>
-  <p><a href="/downloads/HC1Setup.exe">Hypercam 1 (Unregistered) - 1997</a></p>
+  <p><a href="/downloads/HC1Setup.exe">Hypercam 1.61.02 - 2002</a></p>
 </fieldset>
 <fieldset>
   <h3>2005-2007</h3>  
