--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
   <p><a href="revivals.html">revivals of anything we can find</a></p>
 </fieldset>
 <center><p>mocknostalgia.com by mack.</p></center>
-<div id="sfc51skeya4e5bptg674tzch2q13en9hr6d"></div><script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=51skeya4e5bptg674tzch2q13en9hr6d&down=async" async></script><br><noscript><img src="https://counter10.optistats.ovh/private/freecounterstat.php?c=51skeya4e5bptg674tzch2q13en9hr6d" border="0" title="website counter" alt="website counter"></a></noscript>
+<center><div id="sfc51skeya4e5bptg674tzch2q13en9hr6d"></div><script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=51skeya4e5bptg674tzch2q13en9hr6d&down=async" async></script><br><noscript><img src="https://counter10.optistats.ovh/private/freecounterstat.php?c=51skeya4e5bptg674tzch2q13en9hr6d" border="0" title="website counter" alt="website counter"></a></noscript>
