--- a/revivals.html
+++ b/revivals.html
@@ -5,3 +5,12 @@
   <p><a href="https://rainway.xyz">Citron/Rainway</a></p>
   <p><a href="https://rbx.samu3l.wtf">Economy Simulator Reborn</a></p>
 </fieldset>
+<fieldset>
+  <h1>YouTube Revivals (please dont use vidlii)</h1>
+  <p><a href="http://bitview.net">BitView</a></p>
+  <p><a href="https://tracle.tv">Tracle</a></p>
+  <p><a href="http://www.yoretude.com"></a>YoreTude</p>
+  <p><a href="https://vidbit.co">VidBit</a></p>
+  <p><a href="https://liivid.co">LiiVid</a></p>
+  <p><a href="https://wevidi.net">WeVidi</a></p>
+</fieldset>
