--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <h1>welcome to MockNostalgia.com!</h1>
 <h2>we have screen recorders, old revivals of anything we can find, and alot more! including support for old browsers.</h2>
 <fieldset>
+  <h1>Pages</h1>
   <p><a href="screen_recorders.html">screen recorders</a></p>
   <p><a href="revivals.html">revivals of anything we can find</a></p>
+</fieldset>
+<fieldset>
+  <h1>Advertising</h1>
   <p><a href="https://www.youtube.com/channel/UCdKE6f61jnYsMq-SoDMb00w">me</a></p>
+  <p><a href="https://discord.gg/yC5QjweC5x">discord server</a></p>
 </fieldset>
 <center><p>mocknostalgia.com by mack.</p></center>
 <center><div id="sfc51skeya4e5bptg674tzch2q13en9hr6d"></div><script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=51skeya4e5bptg674tzch2q13en9hr6d&down=async" async></script><br><noscript><img src="https://counter10.optistats.ovh/private/freecounterstat.php?c=51skeya4e5bptg674tzch2q13en9hr6d" border="0" title="website counter" alt="website counter"></a></noscript>
