--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <p><a href="https://www.youtube.com/channel/UCdKE6f61jnYsMq-SoDMb00w">me</a></p>
   <p><a href="https://discord.gg/yC5QjweC5x">discord server</a></p>
 </fieldset>
+<center><img src="https://i.imgur.com/SoGCn3I.gif" alt="under construction"></center>
 <center><p>mocknostalgia.com by mack.</p></center>
 <center><div id="sfc51skeya4e5bptg674tzch2q13en9hr6d"></div><script type="text/javascript" src="https://counter10.optistats.ovh/private/counter.js?c=51skeya4e5bptg674tzch2q13en9hr6d&down=async" async></script><br><noscript><img src="https://counter10.optistats.ovh/private/freecounterstat.php?c=51skeya4e5bptg674tzch2q13en9hr6d" border="0" title="website counter" alt="website counter"></a></noscript>
