games update + added flash

--- a/games.html
+++ b/games.html
@@ -10,5 +10,23 @@
                             <p>Solitare*</p>
                                 <p>Spider Solitare*</p>
                                 <h2>* means it cant run on XP and lower, it can run normally on vista and 7, and only the media center version works on 8 and above. pinball is an exception</h2>
-                                
+
+</fieldset>
+<fieldset>
+    <h1>Flash Games</h1>
+    <h2><a href="https://ruffle.rs/demo/">all flash game files can be used here</a></h2>
+    <p><a href="/downloads/flash/papaspizzeria_v2.swf">papas pizzeria</a></p>
+    <p><a href="/downloads/flash/papasburgeria.swf">papas burgeria</a></p>
+    <p><a href="/downloads/flash/papascheeseria.swf">papas cheeseria</a></p>
+    <p><a href="/downloads/flash/papascupcakeria.swf">papas cupcakeria</a</p>
+    <p><a href="/downloads/flash/papasdonuteria.swf">papas donuteria</a></p>
+    <p><a href="/downloads/flash/papasfreezeria.swf">papas freezeria</a></p>
+    <p><a href="/downloads/flash/papashotdoggeria.swf">papas hotdoggeria</a></p>
+    <p><a href="/downloads/flash/papaspancakeria.swf">papas pancakeria</a</p>
+    <p><a href="/downloads/flash/papaspastaria.swf">papas pastaria</a></p>
+    <p><a href="/downloads/flash/papasscooperia.swf">papas scooperia</a></p>
+    <p><a href="/downloads/flash/papassushiria.swf">papas sushiria</a></p>
+    <p><a href="/downloads/flash/papaswingeria.swf">papas wingeria</a></p>
+    
+
 </fieldset>
