--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <p><a href="screen_recorders.html">screen recorders</a></p>
   <p><a href="revivals.html">revivals of anything we can find</a></p>
   <p><a href="gifs.html">collection of gifs (hosted on different sites)</a></p>
+  <p><a href="games.html">games</a></p>
 </fieldset>
 <fieldset>
   <h1>Advertising</h1>
