--- a/screen_recorders.html
+++ b/screen_recorders.html
@@ -2,6 +2,7 @@
 <fieldset>
   <h3>1990-2004</h3>
   <p><a href="/downloads/HC1Setup.exe">Hypercam 1.61.02 - 2002</a></p>
+  <p><a href="/downloads/ACapProSetup_431.exe">ACA Capture Pro 4.31 - 2004</a></p>
 </fieldset>
 <fieldset>
   <h3>2005-2007</h3>  
@@ -9,6 +10,7 @@
   <p><a href="/downloads/SCGsetup.exe">Screen Recorder Gold 2.1 - 2005</a></p>
   <p><a href="/downloads/super_screen_recorder.exe">Super Screen Recorder 4.0 - 2007</a></p>
   <p><a href="/downloads/HC2Setup.exe">Hypercam 2 - 2007</a></p>
+  <p><a href="/downloads/ACapProSetup_560.exe">ACA Capture Pro  5.60 - 2007</a></p>
  <p><a href="/downloads/zdsoft_2.exe">ZDSoft Screen Recorder 2.3 - Unknown Date</a></p>
   <p><a href="/downloads/debut_screen_recorder.exe">Debut Screen Recorder 1.2 - Unknown Date</a></p>
   </fieldset>
