--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <p><a href="revivals.html">revivals of anything we can find</a></p>
   <p><a href="gifs.html">collection of gifs (hosted on different sites)</a></p>
   <p><a href="games.html">games</a></p>
+  <p><a href="software.html">software center</a></p>
 </fieldset>
 <fieldset>
   <h1>Advertising</h1>
+  <p><a href="thx.html">thanks to YOU!</a></p>
   <p><a href="https://www.youtube.com/channel/UCdKE6f61jnYsMq-SoDMb00w">me</a></p>
   <p><a href="https://discord.gg/yC5QjweC5x">discord server</a></p>
 </fieldset>
