--- a/thx.html
+++ b/thx.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <fieldset>
   <h1>Contributors</h1>
   <p>thx straw for screen recorders, movie maker 2.5 and helping out in general</p>
