--- a/software.html
+++ b/software.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <fieldset>
   <h1>Software Center</h1>
   <p><a href="/downloads/Movie_Maker_2.5.zip">Movie Maker 2.5</a></p>
