--- a/screen_recorders.html
+++ b/screen_recorders.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <h1>screen recorders library of MockNostalgia.com</h1>
 <fieldset>
   <h3>1990-2004</h3>
