--- a/revivals.html
+++ b/revivals.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <fieldset>
   <h1>Roblox Revivals</h1>
   <p><a href="https://bitl.itch.io/novetus">Novetus</a></p>
