--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <h1>welcome to MockNostalgia.com!</h1>
 <h2>we have screen recorders, old revivals of anything we can find, and alot more! including support for old browsers.</h2>
 <fieldset>
