--- a/gifs.html
+++ b/gifs.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <center>
   <fieldset>
     <h1><a href="http://textfiles.com/underconstruction/">FOR UNDER CONSTRUCTION GIFS GO HERE!</a></h1>
