--- a/games.html
+++ b/games.html
@@ -1,3 +1,8 @@
+<style>
+body {
+  font-family: 'Comic Sans MS', cursive;
+}
+</style>
 <fieldset>
     <a href="/downloads/MGsetup.exe">Collection of Microsoft Games</a>
     <h2>INCLUDING:</h2>
